--- a/nft-minting-app-main/src/styles/reset.css
+++ b/nft-minting-app-main/src/styles/reset.css
@@ -86,6 +86,10 @@ video {
   font: inherit;
   vertical-align: baseline;
 }
+
+.sc-jSgvzq.hgrPFv {
+    background-color: #000!important;
+}
 /* HTML5 display-role reset for older browsers */
 article,
 aside,
